@@ -1,5 +1,9 @@
 2006-12-23 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
 
+	* David Maass's patch for VStudio2005 compilation failure.
+
+2006-12-23 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
+
 	* Erik Johansson's patch for invalid xml output.
 
 2006-12-23 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
